Bug 540558: window.InstallTrigger.install exists but won't work. r=dveditz